# API-Websocket-TF2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
routers/: map_change.py  messages.py  player_connected.py  player_disconnected.py  vote_end.py
